# Lightshow

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CHANGES.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README.rst  apply_patch.py  build.sh  build_sphinx.sh  paper.bib  paper.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: black.yml  build_docs.yml  ci.yml  ci_deploy.yml  deploy.yaml  docs.yaml  docs.yml  flake8.yml  publish.yml  version_init_check.yaml
data/mp_structures/: mp-390.json
data/pseudopotential/xspectral/core_hole/: Ti.fch.upf  ti.nch.UPF
data/pseudopotential/xspectral/neutral/: Ti.pbesol-spn-kjpaw_psl.1.0.0.UPF
data/pseudopotential/xspectral/orbital/: Ti.wfc
docs/source/: api.rst  conf.py  index.rst  installation.rst  lightshow.parameters.rst  modules.rst  project.rst  quickstart.rst  usage.rst
docs/source/project/: authors.rst  funding.rst
lightshow/: __init__.py  _version.py  database.py  defaults.py  environment_utils.py  io_utils.py  pymatgen_utils.py
lightshow/_tests/: TiO10.json  conftest.py  database_obj_test.json  mp-390.json  mvc-11115.json  test_ai.py  test_broaden.py  test_database.py  test_exciting.py  test_fdmnes.py  test_metadata.py  test_vasp.py
lightshow/_tests/ai_examples/material/mp-1005792/: POSCAR  README.md
lightshow/_tests/dummy_chpsp_files/: Core_O.wfc  Core_Ti.wfc  O.fch.upf  Ti.fch.upf
lightshow/_tests/dummy_potcar_files/O_GW/: POTCAR
lightshow/_tests/dummy_potcar_files/Ti_sv_GW/: POTCAR
lightshow/_tests/dummy_psp_files/: O.mock.upf  Ti.mock.upf  mock_cutoff_table.json
lightshow/_tests/helpers/: geometry.py
lightshow/_tests/sample_files/: README.rst  ene_dep_broad.txt  gauss_broad.txt  lorentz_broad.txt  voigt_broad.txt
lightshow/_tests/structure_files/mp-10734/: POSCAR
lightshow/_tests/structure_files/mp-1215/: POSCAR
lightshow/_tests/structure_files/mp-1840/: POSCAR
lightshow/_tests/structure_files/mp-2657/: POSCAR
lightshow/_tests/structure_files/mp-2664/: POSCAR
lightshow/_tests/structure_files/mp-390/: POSCAR
lightshow/_tests/structure_files/mp-430/: POSCAR
lightshow/_tests/structure_files/mp-458/: POSCAR
lightshow/_tests/structure_files/mvc-11115/: POSCAR
lightshow/ai/: README.md  entrypoint.py  models.py  server.py  test_server.py  xas_ui.py
lightshow/ai/models/M3GNet-MP-2021.2.8-PES/: LICENSE  README.md
lightshow/common/: kpoints.py  nbands.py
lightshow/omnixas/: README.md  lightshow.py
lightshow/parameters/: __init__.py  _base.py  exciting.py  fdmnes.py  feff.py  ocean.py  vasp.py  xspectra.py
lightshow/parameters/pseudos/: FCH1_pseudos.json  PD_stringent.json
lightshow/parameters/pseudos/data/: FCH1.json
lightshow/parameters/pseudos/scripts/: pspDigest.py  pspExtract.py  pspManual.py  pspZval.py
lightshow/postprocess/: Broaden.py  autobroaden.py  broaden.py  compare_utils.py  parse.py
lightshow/postprocess/example/: XASBroadening.ipynb  anatase_exp.npz
lightshow/spectroscopy/: feff.py
lightshow/utils/: environ_utils.py
notebooks/: 00_basic_usage.ipynb  01_Ti_K_anatase_broaden.ipynb  README.rst  Ti_K-edge_ocean.ipynb  compare_spectra.ipynb  parse_spectra.ipynb
notebooks/data_parse_spectra/mp-1203/EXCITING/: INFO.OUT
notebooks/data_parse_spectra/mp-1203/EXCITING/Spectra-8-8-6/0/EPSILON/: EPSILON_BSE-singlet-TDA-BAR_SCR-full_OC11.OUT  EPSILON_BSE-singlet-TDA-BAR_SCR-full_OC22.OUT  EPSILON_BSE-singlet-TDA-BAR_SCR-full_OC33.OUT
notebooks/data_parse_spectra/mp-1203/FEFF/000_Ti/: ATOMS  HEADER  PARAMETERS  POTENTIALS  feff.inp  feff.out  grid.inp
notebooks/data_parse_spectra/mp-1203/OCEAN/: scf.out
notebooks/data_parse_spectra/mp-1203/OCEAN/Spectra-8-8-6/: absspct_Ti.0001_1s_01  absspct_Ti.0001_1s_02  absspct_Ti.0001_1s_03  absspct_Ti.0003_1s_01  absspct_Ti.0003_1s_02  absspct_Ti.0003_1s_03  absspct_Ti.0005_1s_01  absspct_Ti.0005_1s_02  absspct_Ti.0005_1s_03
notebooks/data_parse_spectra/mp-1203/XSPECTRA/: es_0.in  es_0.out
notebooks/data_parse_spectra/mp-1203/XSPECTRA/Spectra-6-6-5/0/dipole1/: xanes.in  xanes.out
notebooks/data_parse_spectra/mp-1203/XSPECTRA/Spectra-6-6-5/0/dipole2/: xanes.in  xanes.out
notebooks/data_parse_spectra/mp-1203/XSPECTRA/Spectra-6-6-5/0/dipole3/: xanes.in  xanes.out
notebooks/spectra_files/: anatase_exciting.txt  anatase_exp.txt  anatase_ocean.txt  anatase_theory_FEFF.txt  anatase_theory_VASP.txt  anatase_xspectra.txt
old-docs/source/: lightshow.rst  quickstart.rst
runScripts/: .gitignore  README  fetchSingle.py  photonSym.py
runScripts/EXCITING/: makeExcitingInputs.py
runScripts/OCEAN/: makeOceanInputs.py
runScripts/Xspectra/: espresso.py  makeXspectraInputs.py  xspectra.json
scripts/: README.rst  build_docs.sh  build_project.sh  install.sh  update_version.sh
xanes_bench/: .fetchSingle.py.swp  .gitignore  README  computeQErmsd.py  curveCompare.py  fetchFile.py  fetchSingle.py  groundState.py  manualCurveCompare.py  parseVASP.py  photonSym.py  utils.py
xanes_bench/CurveComparisons/: autoCompareBuilder.py  compare.py  compare_pasers.py  compare_utils.py  curveCompare.py  curveCompareBase.py  curveCompare_2D.py  manualCurveCompare.py  readSpectraBase.py
xanes_bench/EXCITING/: ex2Band.py  exciting.json  exciting_xas.json  makeExcitingInputs.py  parseExciting.py
xanes_bench/General/: kden.py
xanes_bench/OCEAN/: fakeASE.py  makeOceanInputs.py  ocean.json
xanes_bench/QE/: qe.json  qe2Band.py
xanes_bench/RunScripts/: cluster.json  clusterExample.json  collectQE.py  runQE.py
xanes_bench/VASP/: parseVASP.py
xanes_bench/Xspectra/: .nfs0000000024559f3200000147  digestXS.py  espresso.py  makeXspectraInputs.py  preprocessing.py  xspectra.json
xanes_bench/pseudos/data/: FCH1.json  SSSP_precision.json
xanes_bench/pseudos/scripts/: FCH1.json  pspDigest.py  pspExtract.py  pspManual.py  pspZval.py
