[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lightshow"
authors = [
    {"name" = "Matthew R. Carbone", "email" = "mcarbone@bnl.gov"},
    {"name" = "Fanchen Meng", "email" = "fmeng1@bnl.gov"},
    {"name" = "Deyu Lu", "email" = "dlu@bnl.gov"},
    {"name" = "Benedikt Maurer"},
    {"name" = "Fabien Peschel"},
    {"name" = "Eli Stavitski"},
    {"name" = "Xiaohui Qu"},
    {"name" = "John T. Vinson"},
    {"name" = "Christian Vorwerk"}
]
maintainers = [
    {"name" = "Matthew R. Carbone", "email" = "mcarbone@bnl.gov"},
    {"name" = "Fanchen Meng", "email" = "fmeng1@bnl.gov"}
]
description = "A one-stop-shop for writing computational spectroscopy input files"
readme = "README.md"
requires-python = ">=3.9"
license = {"file" = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy==1.26.4",
    "pymatgen==2024.3.1",
    "mp-api==0.41.2",
    "ase",
    "tqdm",
    "monty"
]

# Dynamic version reads __version__ directly from my_package.__init__
dynamic = ["version"]

# [tool.flit.sdist]
# exclude = [
#     "lightshow/_tests",
#     "docs"
# ]

[project.optional-dependencies]
test = [
    "coverage",
    "flake8",
    "ruff",
    "pytest",
    "pytest-cov",
    "nbstripout",
    "pre-commit",
]
doc = [
    "sphinx",
    "numpydoc",
    "sphinx-copybutton",
    "ipython",
    "matplotlib",
    "myst-parser",
]
build = [
    "flit~=3.7",
    "dunamai==1.19.2",
]

[tool.setuptools]
packages = ["lightshow"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 60
